syntax = "proto3";

option csharp_namespace = "GrpcRecipeClient.Protos";

import "google/protobuf/empty.proto";
package Category;

service CategoryService {
	rpc ListCategories (google.protobuf.Empty) returns (ListCategoriesResponse);
	rpc CreateCategory (Category) returns (Category);
	rpc UpdateCategory (Category) returns (Category);
	rpc DeleteCategory (Category) returns (Category);
}

message ListCategoriesResponse {
	repeated string Categories = 1;
}

message Category {
	string title = 1;
	optional string old_title = 2;
}